# polyarb

./: .env.example  ENHANCED_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
examples/: __init__.py  add_custom_platform.py  basic_usage.py  demo_with_mock_data.py  enhanced_system_demo.py  single_event_multi_market_scan.py
polyarb/: __init__.py  config.py
polyarb/core/: __init__.py  arbitrage_engine.py  opportunity.py
polyarb/data/: __init__.py  clob_client.py  database.py  gamma_client.py  gamma_params.py  models.py  price_accessor.py
polyarb/embeddings/: __init__.py  clustering.py  dependency_detector.py  event_embedder.py  vector_store.py
polyarb/execution/: __init__.py  basket_executor.py  risk_manager.py  rule_analyzer.py
polyarb/reporting/: __init__.py  backtest.py  performance_tracker.py  report_generator.py
polyarb/scanner/: __init__.py  base_scanner.py  enhanced_opportunity.py  negrisk_scanner.py  single_condition_scanner.py  single_event_multi_market_scanner.py  strategy_scanner.py
polyarb/strategies/: __init__.py  base.py  registry.py  templates.py
tests/: test_arbitrage_engine.py  test_clob_client.py  test_polymarket_parsing.py  test_single_event_multi_market_scanner.py
